Add url of Syria instance

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,5 @@
+
+instance_url: http://data.unhcr.org/api/instances/show.json?id=syria
 country_url: http://data.unhcr.org/api/population/get_countries.json?instance_id=syria
 regional_url: http://data.unhcr.org/api/population/get_regions.json?instance_id=syria
 
